# bg_calc

./: .gitignore  CMakeLists.txt
include/: attributes.h  hs_board.h  minions.h
src/: battle_test.cpp  hs_board.cpp  main.cpp  minions.cpp  parser.cpp
